--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
-        "sweetalert2": "^11.7.32"
+        "boxicons": "^2.1.4",
+        "sweetalert2": "^11.6.13"
     }
 }
